--- a/clusters/z-pi/workloads/nginx/nginx-helmrelease.yaml
+++ b/clusters/z-pi/workloads/nginx/nginx-helmrelease.yaml
@@ -8,10 +8,12 @@ spec:
   chart:
     spec:
       chart: nginx
-      version: "1.0.0"
+      version: 13.2.15
       sourceRef:
         kind: HelmRepository
-        name: my-helm-repo
+        name: bitnami
         namespace: flux-system
   values:
     replicaCount: 1
+    service:
+      type: ClusterIP
